# gsocket

./: .gitignore  ChangeLog  LICENSE  Makefile.am  README.md  bootstrap  configure.ac  install.sh
.github/workflows/: ci.yaml  deploy-push.yaml  fbsd.yml  static-release-push.yml  stealth-push-beta.yaml  stealth-push.yaml
deploy/: README-update.md  README.md  deploy.sh  deploy_server.sh
examples/: 1_gs-helloworld.c  2_gs-pipe.c  3_gs-full-pipe.c  4_gs-netcat.c  Makefile.am  common.h  run_all_tests.sh  socks.c  socks.h  utils.c  utils.h
examples/port-forward/: README.md  gs-portforward.service
examples/sshd/: README.md  gs-sshd.service
examples/systemd-root-shell/: README.md  gs-root-shell.service
examples/user-shell/: README.md
examples/wireguard/: README.md  client-privatekey  client-publickey  server-privatekey  server-publickey  wg0-client.conf  wg0-server.conf
freebsd-ports/: README.md
freebsd-ports/net/gsocket/: Makefile  distinfo  pkg-descr
gsocket-1.4.26/examples/: Makefile.am
include/: Makefile.am
include/gsocket/: Makefile.am  buf.h  event.h  gs-readline.h  gs-select.h  gsocket-ssl.h  gsocket.h  list.h  packet.h
lib/: Makefile.am  buf.c  event-test.c  event.c  gs-common.h  gs-externs.h  gs-readline.c  gsocket-engine.c  gsocket-engine.h  gsocket-select.c  gsocket-sha256.c  gsocket-sha256.h  gsocket-ssl.c  gsocket-util.c  list-test.c  list.c  packet.c
man/: Makefile.am  blitz.1  blitz.1.html  gs-mount.1  gs-netcat.1  gs-sftp.1  gs.1  gsocket.1  man2c.sh  man2html.sh
packaging/: Makefile
packaging/debian-deb/: Dockerfile  build.sh  build_all.sh
packaging/debian-deb/DEBIAN/: control.in
packaging/deploy-all/: build.sh  deploy-all_head.sh  mk_deploy-all.sh
packaging/docker/gsocket/: Dockerfile  bashrc  gs-motd  make.sh
packaging/docker/gsocket-tor/: Dockerfile  bashrc  make.sh
packaging/gsnc-deploy-bin/: cyg_bincopy.sh
packaging/gsnc-deploy-bin/docker/: build.sh  build_all.sh
packaging/gsnc-deploy-bin/docker/arm-linux/: Dockerfile
packaging/gsnc-deploy-bin/docker/i386-debian/: Dockerfile
packaging/gsnc-deploy-bin/docker/x86_64-alpine/: Dockerfile
packaging/gsnc-deploy-bin/docker/x86_64-arch/: Dockerfile
packaging/gsnc-deploy-bin/docker/x86_64-centos/: Dockerfile
packaging/gsnc-deploy-bin/docker/x86_64-debian/: Dockerfile
packaging/gsnc-deploy-bin/selftest/: Dockerfile.alpine  Dockerfile.arch  Dockerfile.centos  Dockerfile.debian  Dockerfile.rhel8  Dockerfile.suse-tumbleweed  run.sh  run_all.sh
packaging/openwrt/: release.sh
packaging/openwrt/gsocket/: Makefile
test-build/: build_inc.sh  build_openwrt.sh  compile.conf-example  test-compile.sh
tests/: Makefile  run_all_tests.sh  run_ft_tests.sh  run_gs_tests.sh  run_ping_gsrn.sh  test_tcp_badconn.sh
tools/: 1_gs-helloworld.c  2_gs-pipe.c  3_gs-full-pipe.c  4_gs-netcat.c  Makefile.am  blitz  common.h  console.c  console.h  console_display-test.c  console_display.c  console_display.h  event_mgr.c  event_mgr.h  filetransfer-test.c  filetransfer.c  filetransfer.h  filetransfer_mgr.c  filetransfer_mgr.h  globbing.c  globbing.h  gs  gs-init-secret  gs-mount  gs-netcat.h  gs-sftp  gs_funcs  gs_so-lib.c  gs_so-lib.h  gs_so.c  gs_uchroot.c  gsnc-utils.c  gsnc-utils.h  gsocket  gsocket.conf.in  gsocket_dso-lib.c  gsocket_dso-lib.h  gsocket_dso.c  gsocket_uchroot_dso.c  ids.c  (+11 more)
